--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
 		"react-native-i18n": "^2.0.2",
+		"react-native-lightbox": "^0.6.0",
 		"react-native-parsed-text": "0.0.18"
 	},
 	"devDependencies": {
