--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"react-native-i18n": "^2.0.2",
 		"react-native-lightbox": "^0.6.0",
 		"react-native-meteor": "^1.1.0",
-		"react-native-parsed-text": "0.0.18"
+		"react-native-parsed-text": "0.0.18",
+		"react-redux": "^5.0.5",
+		"redux": "^3.7.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
