--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 		"react-native-lightbox": "^0.6.0",
 		"react-native-meteor": "^1.1.0",
 		"react-native-parsed-text": "0.0.18",
+		"react-native-storage": "^0.2.2",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.2",
-		"redux-saga": "^0.15.6"
+		"redux-saga": "^0.15.6",
+		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
